OVT-5768: preview IE layout bug fixed

--- a/haku-app/src/main/webapp/resources/css/oppija.css
+++ b/haku-app/src/main/webapp/resources/css/oppija.css
@@ -3272,7 +3272,8 @@ button {
       background-position: -60px center; }
 
 .phase-help .help-text {
-  margin-top: 2em; }
+  margin-top: 2em;
+  width: 100%; }
 
 /*** Form step navigation
 ************************************************/
@@ -3368,134 +3369,37 @@ button {
     margin-top: 19px; }
   .preference-sort button.reset {
     float: right; }
-  .preference-sort .index {
-    		/*
-    		text-align:center;
-    
-    
-    		.up,
-    		.down
-    		{
-    			span
-    			{
-    				border:solid 16px #000000;
-    				width:0px;
-    				height:0px;
-    				border-left-color:transparent;
-    				border-right-color:transparent;
-    				background-color:transparent;
-    				padding:0px;
-    				margin:2px;
-    				position:relative;
-    				background-image:none;
-    				
-    				span
-    				{
-    					border:solid 15px #feba00;
-    					width:0px;
-    					height:0px;
-    					overflow:hidden;
-    					border-left-color:transparent;
-    					border-right-color:transparent;
-    					background-color:transparent;
-    					padding:0px;
-    					margin:0px;
-    					position:absolute;
-    					left:-15px;
-    				}
-    			}
-    		}
-    
-    		.up
-    		{
-    			span
-    			{
-    				border-top-width:0px;
-    				
-    				span
-    				{
-    					border-top-width:0px;bottom:-16px;
-    				}
-    			}
-    			
-    			&:hover span span
-    			{
-    				border-top-width:0px;bottom:-15px;
-    			}
-    			
-    			&:active span span,
-    			&:focus span span
-    			{
-    				left:-14px;
-    				bottom:-16px;
-    				border-width:14px;
-    				border-top-width:0px;
-    			}
-    		}
-    		
-    		.down
-    		{
-    			span
-    			{
-    				border-bottom-width:0px;
-    				
-    				span
-    				{
-    					border-bottom-width:0px;top:-15px;
-    				}
-    			}
-    			
-    			&:hover span span
-    			{
-    				border-bottom-width:0px;top:-16px;
-    			}
-    			
-    			&:active span span,
-    			&:focus span span
-    			{
-    				left:-14px;
-    				top:-14px;
-    				border-width:14px;
-    				border-bottom-width:0px;
-    			}
-    		}
-    
-    		.label
-    		{
-    			text-transform:uppercase;
-    		}
-    		*/ }
-    .preference-sort .index span {
-      text-align: left;
-      font-size: 2.769em;
-      line-height: 1em;
-      margin: 0 20px 0 0; }
-    .preference-sort .index .sort-arrows {
-      float: right; }
-    .preference-sort .index .up, .preference-sort .index .down {
-      float: right;
+  .preference-sort .index span {
+    text-align: left;
+    font-size: 2.769em;
+    line-height: 1em;
+    margin: 0 20px 0 0; }
+  .preference-sort .index .sort-arrows {
+    float: right; }
+  .preference-sort .index .up, .preference-sort .index .down {
+    float: right;
+    font-size: 0;
+    line-height: 0; }
+    .preference-sort .index .up span, .preference-sort .index .down span {
+      background-image: url("../img/updownarrow-sprite.png");
+      color: transparent;
       font-size: 0;
-      line-height: 0; }
-      .preference-sort .index .up span, .preference-sort .index .down span {
-        background-image: url("../img/updownarrow-sprite.png");
-        color: transparent;
-        font-size: 0;
-        line-height: 0;
-        width: 19px;
-        height: 18px;
-        margin: 0; }
-        .preference-sort .index .up span span, .preference-sort .index .down span span {
-          background-image: none;
-          width: 0;
-          height: 0; }
-    .preference-sort .index .up span {
-      background-position: 0 0; }
-    .preference-sort .index .up:hover span {
-      background-position: -19px 0; }
-    .preference-sort .index .down span {
-      background-position: 0 -18px; }
-    .preference-sort .index .down:hover span {
-      background-position: -19px -18px; }
+      line-height: 0;
+      width: 19px;
+      height: 18px;
+      margin: 0; }
+      .preference-sort .index .up span span, .preference-sort .index .down span span {
+        background-image: none;
+        width: 0;
+        height: 0; }
+  .preference-sort .index .up span {
+    background-position: 0 0; }
+  .preference-sort .index .up:hover span {
+    background-position: -19px 0; }
+  .preference-sort .index .down span {
+    background-position: 0 -18px; }
+  .preference-sort .index .down:hover span {
+    background-position: -19px -18px; }
   .preference-sort .preference-fields {
     margin-right: 1.5em;
     float: left; }
